# safeflow

./: .gitignore  CLAUDE.md  PHASE1_CHECKLIST.md  README.md  alembic.ini  config.example.py  requirements.txt
.github/workflows/: code-formatting.yml
alembic/: env.py
alembic/versions/: .gitkeep  20250122_0100_create_orchestration_tables.py
backend/: .env.example  MCP_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/mcp/: __init__.py  router.py
backend/app/core/: app.py  config.py  mcp_base.py
backend/app/mcp_tools/: semgrep_tool.py  trivy_tool.py  zap_tool.py
backend/app/models/: task.py  tool.py
backend/app/services/: mcp_server.py  mcp_service.py
docs/: DEV_PLAN.md  MCP_COMPLETE_GUIDE.md  ORCHESTRATION_IMPLEMENTATION.md  PRD.md  README.md  how-to-design.md  mcp_protocol_spec.md  orchestration_guide.md  prd.md  tool-installation-guide.md
frontend/: .env.example  .prettierignore  .prettierrc  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/mcp/: page.tsx
frontend/src/components/: ErrorDisplay.tsx  Loading.tsx  Navigation.tsx
frontend/src/components/chat/: ChatInterface.tsx  MCPStatus.tsx
frontend/src/components/icons/: ChevronDownIcon.tsx  ChevronLeftIcon.tsx  CloseIcon.tsx  (+27 more)
frontend/src/hooks/: useApi.ts
safeflow/: __init__.py
safeflow/adapters/: __init__.py  base.py  semgrep_adapter.py  syft_adapter.py
safeflow/api/: __init__.py  main.py  orchestration.py
safeflow/mcp/: __init__.py  client.py  server.py
safeflow/orchestration/: __init__.py  db_models.py  engine.py  executor.py  models.py  nodes.py  scheduler.py  storage.py  templates.py
safeflow/schemas/: __init__.py  tool_capability.py  vulnerability.py
safeflow/services/: __init__.py  tool_registry.py  tool_service.py
safeflow/web/: detail.html  index.html
scripts/: README.md  debug_mcp_server.sh  demo_without_db.py  init_orchestration_db.py  install-tools-linux.sh  install-tools-mac.sh  install-tools-windows.bat  mcp_http_proxy.py  mcp_protocol_demo.py  mcp_service_demo.py  quick_scan_demo.py  quick_test.sh  setup_and_test.sh  start_mcp_inspector.sh  start_mcp_server.sh  test_mcp_client.py  test_mcp_curl.sh  test_mcp_inspector.sh  verify-tools.sh  workflow_demo.py
tests/: __init__.py
tests/test_adapters/: __init__.py  test_semgrep.py
tests/test_orchestration/: __init__.py  test_basic.py
(+1 files in other folders)
