[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "mcp>=1.22.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
